# intentkit

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LLM.md  README.md  docker-compose.yml  lint.sh  pyproject.toml  release_notes.md
.basedpyright/: baseline.json
.github/workflows/: build.yml  lint.yml
agent_docs/: ops_guide.md  tool_development.md
agent_docs/todo/: 06-testing-ci.md  99-acp-agentic-commerce.md
app/: __init__.py  api.py  autonomous.py
app/common/: __init__.py  autonomous.py  chat.py  metadata.py  schema.py
app/entrypoints/: agent_api.py  autonomous.py
app/local/: __init__.py  agent.py  autonomous.py  chat.py  content.py  lead.py
app/team/: __init__.py  agent.py  autonomous.py  chat.py  content.py  lead.py  schemas.py  team.py  user.py
docs/: .gitignore  Dockerfile  go.mod  hugo.yaml
docs/assets/css/: custom.css
docs/content/en/: _index.md
docs/layouts/_default/: list.rss.xml
docs/plans/: 2026-02-15-docs-hugo-docsy.md  2026-02-16-hextra-switch.md
frontend/: AGENTS.md  package-lock.json  package.json
frontend/src/app/: error.tsx  global-error.tsx  not-found.tsx
frontend/src/lib/: api.ts  autonomousChat.test.ts  autonomousChat.ts  utils.ts
frontend/src/types/: agent.ts  chat.ts  content.ts
integrations/: Dockerfile.wechat  go.mod  go.sum
integrations/cmd/wechat/: main.go
integrations/shared/: dispatcher.go
integrations/shared/alert/: handler.go  handler_test.go
integrations/shared/outage/: tracker.go  tracker_test.go
integrations/telegram/: Dockerfile  go.mod  go.sum
integrations/telegram/bot/: manager.go  poller.go  poller_test.go
integrations/types/: messages.go
integrations/wechat/bot/: manager.go  manager_test.go  session_timer.go  session_timer_test.go  silk.go  silk_test.go
integrations/wechat/config/: config.go
integrations/wechat/store/: models.go
intentkit/: MANIFEST.in  README.md
intentkit/abstracts/: graph.py  wallet.py
intentkit/clients/: moralis.py  s3.py
intentkit/config/: config.py  db_mig.py  tracing.py
intentkit/core/: agent_activity.py  agent_post.py  api.py  asset.py  autonomous.py  avatar.py  client.py  engine.py  executor.py  memory.py  middleware.py  prompt.py  public_api.py  share_link.py  template.py
intentkit/models/: agent_activity.py  agent_post.py  agent_schema.json  app_setting.py  autonomous.py  chat.py  llm.csv  llm.py  llm.yaml  llm_picker.py  skill.py  team.py  template.py  tool.py  user.py  user_data.py  x402_order.py
intentkit/skills/: availability.py  onchain.py
intentkit/tools/: __init__.py  availability.py  base.py  onchain.py
intentkit/utils/: __init__.py  alert_handler.py  error.py  pdf.py
intentkit/wallets/: cdp.py  evm_wallet.py  native.py  privy.py  privy_nonce.py  privy_safe.py  web3.py
public_agents/base/: cn-market-overview.yaml  cn-stock-fundamentals.yaml  cn-stock-news.yaml  cn-stock-quote.yaml  code-explainer.yaml  meeting-minutes.yaml  nutrition-planner.yaml  pitch-deck-advisor.yaml  product-description-writer.yaml  reddit-analyst.yaml  resume-coach.yaml  story-generator.yaml  travel-planner.yaml  trend-spotter.yaml
scripts/: admin_set_public_agent_limit.py  batch_migrate_skills.py  export_single_cdp_key.py  fix_credit_event_consistency.py  fix_credit_event_consistency_optimized.py  list_agent_assets.py  migrate_add_user_timezone_language.py  migrate_autonomous_to_team.py  migrate_base_amounts.py  migrate_credit_transaction_amounts.py  migrate_skill_to_tool.sql  migrate_skill_to_tool_rollback.sql  sync_mcp_schemas.py  sync_schema.py  sync_states_schema.py  test_x402_check_price.py  transfer_cdp_agent_wallets.py
tests/: conftest.py
tests/bdd/: conftest.py  test_agent_autonomous.py  test_agent_management.py  test_agent_public_info.py  test_agent_tool_sanitize.py  test_create_agent_tool_validation.py  test_engine_conversation.py  test_onchain_aave_v3.py  test_onchain_aerodrome.py  test_onchain_erc20.py  test_onchain_erc721.py  test_onchain_morpho.py  test_onchain_pancakeswap.py  test_onchain_uniswap.py
tests/config/: test_config.py  test_tracing.py
tests/core/: test_agent_activity.py  test_agent_asset.py  test_agent_info.py  test_agent_local.py  test_agent_management.py  test_agent_post.py  test_agent_publish.py  test_agent_safe_token_spending_limit.py  test_agent_state_reducer.py  test_autonomous_runner.py  test_cached_input_pricing.py  test_core_autonomous.py  test_credit_soft_off.py  test_engine.py  test_engine_media_blocks.py  test_lead_follow.py  test_lead_service.py  test_lead_sub_agents.py  test_llm.py  test_manager_publish_skill.py  test_manager_publish_tool.py  test_media_block_sanitizer.py  test_origin_provider.py  test_pdf_url_fetcher.py  test_privy_owner_validation.py  test_prompt_entrypoint.py  test_prompt_memory.py  test_prompt_tool_names.py  test_push_channel.py  test_recursion.py  test_skill_availability_filter.py  test_system_skills.py  test_system_tools.py  test_team_feed.py  test_team_info.py  test_team_push.py  test_template.py  test_tool_availability_filter.py  test_tool_listing.py  test_tool_registry.py  (+2 more)
tests/local/: test_autonomous.py  test_chat.py  test_content.py  test_public_api.py
tests/manual/: verify_redundant_fields.py
tests/models/: test_autonomous.py  test_llm_cost.py  test_llm_picker.py  test_skills_schema.py  test_team_chat_draft.py  test_tool_enum_values.py  test_tools_schema.py  test_user.py  test_x402_order.py
tests/scripts/: test_migrate_autonomous_to_team.py  test_migrate_skill_to_tool.py  test_safe_migrate_skill_to_tool.py
tests/skills/: test_cn_stock.py  test_create_post_skill.py  test_image.py
tests/tools/: test_aave_v3.py  test_all_toolsets.py  test_cn_stock.py  test_create_post_tool.py  test_defillama_api.py  test_defillama_api_integration.py  test_dune.py  test_image.py  test_mcp_wrapper.py  test_pancakeswap.py  test_schema_states_sync.py  test_tool_price_registry.py  test_ui.py  test_update_memory_tool.py  test_x402_safe_funding.py
tests/wallets/: test_native_wallet.py  test_privy_spending_limit_sync.py  test_safe_deployment_nonce.py  test_unified_wallet.py
(+712 files in other folders)
