[project]
name = "intentkit"
version = "0.0.0"
description = "Intent-based AI Agent Platform - Core Package"
authors = [
    { name = "Ruihua", email = "ruihua@crestal.network" },
]
requires-python = "==3.13.*"
readme = "intentkit/README.md"
license = { file = "intentkit/LICENSE" }
dependencies = [
    # AWS
    "aws-secretsmanager-caching>=1.1.3",
    "boto3>=1.37.23,<2.0.0",
    "botocore>=1.35.97",
    "mypy-boto3-s3>=1.37.24,<2.0.0",
    # Web framework
    "fastapi>=0.115.8",
    "starlette>=0.47.1",
    "httpx>=0.28.1",
    "httpcore>=1.0.9",
    "aiohttp>=3.14.0",
    # Database
    "psycopg>=3.2.9",
    "psycopg-pool>=3.2.4",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.21.0",
    "sqlalchemy[asyncio]>=2.0.37",
    "redis>=5.2.1,<8.0.0",
    "supabase>=2.16.0",
    # LangChain & LLM
    "langchain>=1.3,<2",
    "langchain-community>=0.4,<1",
    "langchain-core>=1.4,<2",
    "langchain-openai>=1.2,<2",
    "langchain-text-splitters>=1.1,<2",
    "langchain-deepseek>=1.0,<2",
    "langchain-google-genai>=4.2,<5",
    "langchain-anthropic>=1.4,<2",
    "langchain-openrouter>=0.2.3,<1",
    "openrouter>=0.9.0",
    "google-genai>=2.8.0",
    "langgraph>=1.2,<2",
    "langgraph-checkpoint>=4.1,<5",
    "langgraph-checkpoint-postgres>=3.1,<4",
    "langgraph-prebuilt>=1.1,<2",
    "openai>=1.59.6",
    "langsmith>=0.8.9",
    "ormsgpack>=1.12.2",
    # Blockchain / Web3
    "cdp-sdk>=1.31.1",
    "web3>=7.10.0",
    "eth-abi>=5.0.0",
    "eth-account>=0.13.7",
    "eth-typing>=6.0.0",
    "eth-utils>=2.1.0",
    "hexbytes>=1.3.1",
    "x402>=2.0.0",
    # Social platforms
    "slack-sdk>=3.34.0",
    "tweepy[async]>=4.15.0",
    # Utilities
    "cron-validator>=1.0.8,<2.0.0",
    "epyxid>=0.3.3",
    "filetype>=1.2.0,<2.0.0",
    "jsonref>=1.1.0",
    "pillow>=11.1.0,<13.0.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    # Scheduling (core/scheduler.py)
    "apscheduler>=3.11.0",
    # Utilities (direct imports of pydantic/web3 companions)
    "cryptography>=48.0.0",
    "pydantic-core>=2.46.4",
    "typing-extensions>=4.15.0",
    # MCP (Model Context Protocol)
    "mcp>=1.0.0",
    # Chinese A-share market data (cn_stock tool)
    "akshare>=1.16.0",
]
keywords = ["ai", "agent", "intent", "blockchain", "crypto"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
# PDF rendering (utils/pdf.py imports these lazily; weasyprint needs system
# pango/cairo, so it stays out of the default install)
pdf = [
    "weasyprint>=63.0",
    "markdown>=3.7",
    "pymdown-extensions>=10.0",
]
# Ollama provider support (models/llm.py imports langchain_ollama lazily)
ollama = [
    "langchain-ollama>=1.1,<2",
]

[project.urls]
Homepage = "https://github.com/crestalnetwork/intentkit"
Repository = "https://github.com/crestalnetwork/intentkit"
Documentation = "https://github.com/crestalnetwork/intentkit/tree/main/docs"
"Bug Tracker" = "https://github.com/crestalnetwork/intentkit/issues"

[dependency-groups]
# App runtime dependencies (app/ folder needs these beyond intentkit)
app = [
    "gunicorn>=23.0.0",
    "uvicorn>=0.34.0,<1.0.0",
    "pydantic-settings>=2.8.1",
    "python-multipart>=0.0.20",
    "sentry-sdk[fastapi]>=2.20.0",
    # PDF generation (the pdf extra, pinned identically)
    "weasyprint>=63.0",
    "markdown>=3.7",
    "pymdown-extensions>=10.0",
    "pyjwt>=2.13.0",
]
# Development-only dependencies (testing, linting, local dev tools)
dev = [
    # Include app dependencies for local development
    { include-group = "app" },
    # Testing
    "pytest>=8.4.0",
    "pytest-asyncio>=1.2.0",
    "testing.postgresql",
    # Linting and code quality
    "ruff>=0.11.9",
    "deptry>=0.23.0",
    # Database migrations
    "alembic>=1.14.0",
    # Local LLM testing
    "langchain-ollama>=1.1,<2",
    "jsonschema>=4.26.0",
    "basedpyright>=1.39.7",
    "import-linter>=2.11",
]

[tool.uv]
package = true
default-groups = ["dev"]

# Override bcl to >=3.0.0 because 2.x lacks Linux ARM64 (aarch64) wheels,
# causing source builds to fail on Python 3.13 (pkgutil.ImpImporter removed).
# bcl 3.0.0 has manylinux_2_17_aarch64 wheels that work on ARM64 Docker builds.
override-dependencies = ["bcl>=3.0.0"]


[tool.basedpyright]
# scripts/ holds one-off ops/migration scripts with loose typing; not worth checking
exclude = ["scripts", "**/node_modules", "**/__pycache__", "**/.*", "dist", "build"]
reportAny = false
reportExplicitAny = false
reportMissingTypeStubs = false
reportCallInDefaultInitializer = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportImplicitStringConcatenation = false
reportUnusedCallResult = false
reportMissingParameterType = false
reportUnknownParameterType = false
reportImplicitOverride = false
reportUnusedParameter = false
reportUnannotatedClassAttribute = false
reportUnknownLambdaType = false
reportMissingTypeArgument = false
reportUnnecessaryIsInstance = false
reportUnnecessaryComparison = false

# Tests legitimately reach into private members; keep those rules library-only
[[tool.basedpyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = false
reportPrivateLocalImportUsage = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["intentkit"]

[tool.hatch.build.targets.sdist]
include = [
    "intentkit",
    "pyproject.toml",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["intentkit"]
known-local-folder = ["app"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.deptry]
known_first_party = ["intentkit"]
# scripts/ are one-off ops tools run in the dev env; tests run under dev deps;
# .claude may hold throwaway git worktrees (separate checkouts of this repo)
exclude = ["scripts", "tests", "frontend", "docs", "\\.venv", "\\.claude"]

[tool.deptry.per_rule_ignores]
# asyncpg/aiosqlite are loaded dynamically by SQLAlchemy as DB drivers;
# pymdown-extensions is loaded by name through the markdown extension registry
DEP002 = ["asyncpg", "aiosqlite", "pymdown-extensions"]
# app/ legitimately uses the app dependency group (deptry treats groups as dev)
DEP004 = ["sentry_sdk", "jwt"]

# Enforces the import dependency order documented in CLAUDE.md.
# Each layer may import the ones below it, never above.
[tool.importlinter]
root_package = "intentkit"

[[tool.importlinter.contracts]]
name = "intentkit layered architecture"
type = "layers"
layers = [
    "intentkit.core",
    "intentkit.tools",
    "intentkit.wallets",
    "intentkit.clients",
    "intentkit.abstracts",
    "intentkit.models",
    "intentkit.config",
    "intentkit.utils",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "bdd: mark test as BDD integration test",
    "integration: hits live external APIs; excluded from the default CI run",
]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
